# framework

./: .gitignore  Makefile.am  Makefile.in  README.md  client.c  config.h.in  config.h.in~  configure  configure.ac  main.c  server.c
cmagent/: Makefile.am  carrier.c  cron.c  cron.h  frame_decoder.c  frame_decoder.h  log.h  net.c  net.h  test.c  worker.c
cmagent/modules/: census.lua  conf.lua  credential.lua  cron.lua  executor.lua  firmware.lua  p2p.lua  reboot.lua  script.lua  setup.lua  status.lua  twx.lua  update.lua
include/: cmagent.h  lock.h  logging.h  sdnet.h
lib/: Makefile  Makefile.am  Makefile.in  lock.h  log.c  log.h
lib/.deps/: log.Po
logging/: Makefile.am  Makefile.in  liblogging.la  logging.c
mm/: Makefile  Makefile.am  Makefile.in  mm.c  mm.h
mm/.deps/: mm.Po
net/: Makefile.am  socket.c
