#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([fm], [1.0])
AM_INIT_AUTOMAKE([-Wall foreign])
#AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])


# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lpthread':

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_PROG_RANLIB([pthread])

AC_CONFIG_FILES([
                Makefile
                 mm/Makefile
                 lib/Makefile
                 ])
AC_OUTPUT
